{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 1015,
  "lineage": "eab5afed-afe7-9869-a325-133b3ce6d954",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055c318e8d2cc1610",
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:elastic-ip/eipalloc-055c318e8d2cc1610",
            "domain": "vpc",
            "id": "eipalloc-055c318e8d2cc1610",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-179-177-8.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.177.8",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "eipalloc-055c318e8d2cc1610",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:internet-gateway/igw-06e42b97049e42acd",
            "id": "igw-06e42b97049e42acd",
            "owner_id": "283236069347",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "IGW-DatNguyen"
            },
            "tags_all": {
              "Name": "IGW-DatNguyen"
            },
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "igw-06e42b97049e42acd",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055c318e8d2cc1610",
            "association_id": "eipassoc-0f5986ce11f7c7f78",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ea316e6bcf2036c6",
            "network_interface_id": "eni-0c35dfdf19ef544fd",
            "private_ip": "10.20.1.77",
            "public_ip": "54.179.177.8",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eaeb33847dc6a563",
            "tags": {
              "Name": "NAT-GW-DatNguyen"
            },
            "tags_all": {
              "Name": "NAT-GW-DatNguyen"
            },
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "nat-0ea316e6bcf2036c6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:route-table/rtb-0fe831ff2dbad4b82",
            "id": "rtb-0fe831ff2dbad4b82",
            "owner_id": "283236069347",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ea316e6bcf2036c6",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "rtb-0fe831ff2dbad4b82",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:route-table/rtb-03f289aa739310af0",
            "id": "rtb-03f289aa739310af0",
            "owner_id": "283236069347",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e42b97049e42acd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "rtb-03f289aa739310af0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e795b17a8607ed3a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0fe831ff2dbad4b82",
            "subnet_id": "subnet-09a9095803a88f429"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "rtbassoc-0e795b17a8607ed3a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a164daa8437f88c6",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0fe831ff2dbad4b82",
            "subnet_id": "subnet-0248531fbe6f4e69c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "rtbassoc-0a164daa8437f88c6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089ca1c485a12aeb1",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03f289aa739310af0",
            "subnet_id": "subnet-0eaeb33847dc6a563"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "rtbassoc-089ca1c485a12aeb1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad5e996d5f3b93c1",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03f289aa739310af0",
            "subnet_id": "subnet-08274921aac3fe091"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "rtbassoc-0ad5e996d5f3b93c1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:security-group/sg-0d0eb47fa5ea9ce12",
            "description": "Cho phep EKS truy cap PostgreSQL noi bo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0eb47fa5ea9ce12",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Allow PostgreSQL traffic from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group-dat",
            "name_prefix": "",
            "owner_id": "283236069347",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG-Dat"
            },
            "tags_all": {
              "Name": "RDS-SG-Dat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "sg-0d0eb47fa5ea9ce12",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:subnet/subnet-09a9095803a88f429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a9095803a88f429",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283236069347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Private-Subnet-1a-Dat"
            },
            "tags_all": {
              "Name": "Private-Subnet-1a-Dat"
            },
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "subnet-09a9095803a88f429",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:subnet/subnet-0248531fbe6f4e69c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0248531fbe6f4e69c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283236069347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Private-Subnet-1b-Dat"
            },
            "tags_all": {
              "Name": "Private-Subnet-1b-Dat"
            },
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "subnet-0248531fbe6f4e69c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:subnet/subnet-0eaeb33847dc6a563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaeb33847dc6a563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "283236069347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Public-Subnet-1a-Dat"
            },
            "tags_all": {
              "Name": "Public-Subnet-1a-Dat"
            },
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "subnet-0eaeb33847dc6a563",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:subnet/subnet-08274921aac3fe091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08274921aac3fe091",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "283236069347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Public-Subnet-1b-Dat"
            },
            "tags_all": {
              "Name": "Public-Subnet-1b-Dat"
            },
            "vpc_id": "vpc-0b291b131a2eef52c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "subnet-08274921aac3fe091",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283236069347:vpc/vpc-0b291b131a2eef52c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-005393a862adc0c41",
            "default_route_table_id": "rtb-0c5e6880e2c710987",
            "default_security_group_id": "sg-00f880f94b6f50922",
            "dhcp_options_id": "dopt-06a053d104bd23043",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b291b131a2eef52c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5e6880e2c710987",
            "owner_id": "283236069347",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "VPC-DatNguyen-Final-MockProject"
            },
            "tags_all": {
              "Name": "VPC-DatNguyen-Final-MockProject"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "283236069347",
            "id": "vpc-0b291b131a2eef52c",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}